# openipdm_pkg

./: .gitignore  LICENSE  pyproject.toml  test_openipdm.ipynb
etl/: .gitignore  extract_data.py  get_schema.py
etl/db_files/: .gitignore
etl/pkl_files/: .gitignore
src/openipdm/: __init__.py  debug_script.py  ssm_kr.py  train_bnn.py
src/openipdm/data/: AnnParams_4atts.mat  PARAMSortedData_Poutre.mat03-Sep-2023.mat  UpdatedInspectorsDataSortedData_Poutre.mat03-Sep-2023.mat  infr_det_syn_data.csv
src/openipdm/pytagi_util/: data_loader.py  model.py  visualizer.py
