[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "openipdm"
version = "0.0.1"
authors = [
  "Zachary Hamida <zac.hamida@gmail.com>"
]
description = "openipdm framework"
license = "MIT"
packages = [{include = "openipdm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.24.3"
scipy = "^1.10.1"
pandas = "^2.0.1"
altair = "^4.2.2"
pytagi = "0.1.6"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]